# imbed_data_prep

./: .buildinfo  LICENSE  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  table_of_contents.html
.github/workflows/: ci.yml
_modules/: index.html
_modules/imbed_data_prep/: embeddings_of_aggregations.html  epstein_files.html  eurovis.html  github_repos.html  hcp.html  jersey_laws.html  lmsys_ai_conversations.html  mcdonalds_reviews.html  prompt_injections.html  trump_vs_zelenskyy.html  twitter_sentiment.html  ultra_chat.html  wildchat.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: imbed_data_prep.rst.txt
imbed_data_prep/: __init__.py  arxiv.py  embeddings_of_aggregations.py  epstein_files.py  eurovis.py  github_repos.py  hcp.py  jersey_laws.py  lmsys_ai_conversations.py  trump_vs_zelenskyy.py  twitter_sentiment.py  wildchat.py  wordnet_words copy.py  wordnet_words.py
imbed_data_prep/arxiv/: README.md
imbed_data_prep/embeddings_of_aggregations/: README.md  __init__.py
imbed_data_prep/epstein_files/: README.md  __init__.py  epstein_files.ipynb  epstein_files_tables_info.json  epstein_files_tables_info.pickle
imbed_data_prep/eurovis/: README.md  __init__.py
imbed_data_prep/github_repos/: README.md  __init__.py
imbed_data_prep/hcp/: README.md  __init__.py  hcp_analysis.ipynb
imbed_data_prep/jersey_laws/: README.md  __init__.py  jersey_laws.ipynb
imbed_data_prep/lmsys_ai_conversations/: README.md  __init__.py
imbed_data_prep/mcdonalds_reviews/: README.md  __init__.py
imbed_data_prep/prompt_injections/: README.md  __init__.py
imbed_data_prep/trump_vs_zelenskyy/: README.md  __init__.py  trump_vs_zelenskyy.ipynb  trump_vs_zelenskyy_transcript.parquet
imbed_data_prep/twitter_sentiment/: README.md  __init__.py  twitter_sentiment.ipynb
imbed_data_prep/ultra_chat/: README.md  __init__.py  ultra_chat.ipynb
imbed_data_prep/wildchat/: README.md  __init__.py
imbed_data_prep/wordnet_words/: README.md  __init__.py
misc/: REFACTOR_SUMMARY.md  ai_prompts.ipynb  delete_me.html  embeddings_and_order.ipynb  epstein_files.ipynb  eurovis copy 2.ipynb  eurovis.ipynb  explore_refactored_data.py  github_repos.ipynb  hcp_analysis.ipynb  mcdonalds_reviews_dacc.ipynb  quick_test_refactor.py  test_synset_refactor.ipynb  trump_vs_zelensky.md  trump_vs_zelenskyy.ipynb  twitter_sentiment.ipynb  using_ai_to_get_data_descriptions.ipynb  various_data_preps.ipynb  wildchat.ipynb  wordnet_words.ipynb
misc/data/: prompt_injection_w_umap_embeddings.tsv  tmp.csv
module_docs/: imbed_data_prep.html
module_docs/imbed_data_prep/: arxiv.html  embeddings_of_aggregations.html  epstein_files.html  eurovis.html  github_repos.html  hcp.html  jersey_laws.html  lmsys_ai_conversations.html  mcdonalds_reviews.html  prompt_injections.html  trump_vs_zelenskyy.html  twitter_sentiment.html  ultra_chat.html  (+2 more)
(+15 files in other folders)
