[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "imbed_data_prep"
version = "0.1.0"
description = "Modules to acquire and prepare data for the imbed package."
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
    { name = "thorwhalen" },
]
dependencies = [
    "imbed",
    "dol",
    "i2",
    "lkj",
    "tabled>=0.1.28",
    "pandas",
    "numpy",
    "oa",
    "datasets",
    "vaderSentiment",
    "nltk",
    "graze",
    "haggle",
    "scikit-learn",
    "requests",
    "beautifulsoup4",
    "duckdb",
    "dill",
]

[project.license]
text = "mit"

[project.urls]
Homepage = "https://github.com/thorwhalen/imbed_data_prep"
Repository = "https://github.com/thorwhalen/imbed_data_prep"
Documentation = "https://thorwhalen.github.io/imbed_data_prep"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.0",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = ""

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
# OPENAI_API_KEY: several submodules read it at import time (via `oa`).
# Wired as a workflow env var so collection doesn't crash; API-calling
# doctests are still marked `# doctest: +SKIP` so CI makes no real calls.
test_envvars = ["OPENAI_API_KEY"]
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
